<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BAF4B"
    tools:context=".MainActivity">

    <!--ImageView
        android:id="@+id/imageView9"
        android:layout_width="300dp"
        android:layout_height="223dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="359dp"

        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg1" /-->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="223dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="360dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />


    <EditText
        android:id="@+id/txtcard"
        android:layout_width="310dp"
        android:layout_height="59dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="283dp"
        android:background="@drawable/custom_ed"
        android:drawableEnd="@drawable/ic_person"
        android:ems="10"
        android:hint="ชื่อผู้ใช้"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#8c8c8c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="310dp"
        android:layout_height="59dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="214dp"
        android:background="@drawable/custom_ed"
        android:drawableEnd="@drawable/ic_password"
        android:ems="10"
        android:hint="รหัสผ่าน"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#8c8c8c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/custom_bt"
        android:text="@string/log"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvfgot"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="73dp"
        android:text="@string/regot"
        android:textColor="#A5E3E6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="182dp"
        android:text="remember?"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvregis"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="73dp"
        android:text="@string/rrresis"
        android:textColor="#5702f7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtthai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="611dp"
        android:text="@string/thai_traditinal_queue"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>