<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFCC"
    tools:context=".ConfirmQueueActivity">


    <include
        android:id="@+id/include"
        layout="@layout/con_toolbar" />


    <ImageView
        android:layout_width="375dp"
        android:layout_height="287dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="20dp"


        android:layout_marginTop="183dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="261dp"
        android:contentDescription="todo11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg1" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="125dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="475dp"
        android:text="ชื่อผู้ใช้:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="125dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="419dp"
        android:text="@string/dddate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="246dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="361dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="257dp"
        android:layout_marginTop="407dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="300dp"
        android:text="Large Text"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="246dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="475dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="73dp"
        android:layout_marginTop="401dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="300dp"
        android:text="@string/tttype"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="125dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="361dp"
        android:text="@string/ttime"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="246dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="419dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="133dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/custom_bt"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="125dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="569dp"
        android:text="ข้อมูลการจอง"
        android:textStyle="bold"
        android:textColor="#191970"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>