<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BAF4B"
    tools:context=".RegisterActivity">


    <include
        layout="@layout/regis_toolbar"/>



    <!--EditText
        android:id="@+id/txt_fname"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="516dp"
        android:ems="10"
        android:hint="@string/fname"
        android:textColorHint="#8c8c8c"
        android:drawableEnd="@drawable/ic_person"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_ed"
        android:textAlignment="gravity"
        android:textDirection="firstStrongRtl"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <!--EditText
        android:id="@+id/txt_lname"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="435dp"
        android:ems="10"
        android:hint="@string/lname"
        android:textColorHint="#8c8c8c"
        android:drawableEnd="@drawable/ic_person"
        android:background="@drawable/custom_ed"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <EditText
        android:id="@+id/txt_cardnum"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="271dp"
        android:ems="10"
        android:hint="เบอร์โทร"
        android:drawableEnd="@drawable/ic_phone"
        android:textColorHint="#8c8c8c"
        android:background="@drawable/custom_ed"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/txt_username"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="189dp"
        android:ems="10"
        android:hint="ชื่อผู้ใช้"
        android:textColorHint="#8c8c8c"
        android:drawableEnd="@drawable/ic_person"
        android:background="@drawable/custom_ed"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_passregis"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="189dp"
        android:ems="10"
        android:hint="@string/regpass"
        android:textColorHint="#8c8c8c"
        android:drawableEnd="@drawable/ic_password"
        android:background="@drawable/custom_ed"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_saveregis"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="104dp"
        android:text="@string/btnreg"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/custom_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Button
        android:id="@+id/btn_return"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="571dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="104dp"
        android:text="@string/returnreg"
        android:background="@drawable/custom_ed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="351dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#8c8c8c"
        android:drawableEnd="@drawable/ic_email"
        android:importantForAutofill="no"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_ed"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>